Remove commit task command